# gtm-sync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Rocket.toml
.github/workflows/: develop.yml  release.yaml
config/: config.toml
src/: main.rs
src/config/: config.rs  repository.rs
src/dto/: request.rs  response.rs
src/git/: git.rs  gtm.rs
src/gtm/: git.rs  gtm.rs  mod.rs
src/model/: config.rs  model.rs
src/repo/: repo_manager.rs
src/server/: controller.rs  mod.rs  resource.rs  server.rs  service.rs  sync.rs
src/sync/: sync.rs
