[package]
name = "gtm-sync"
version = "0.1.4"
authors = ["tavo <tavo.annus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
toml = "0.5.7"
regex = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5", features = ["full"] }
log = "0.4.14"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]